--- a/work-info/pom.xml
+++ b/work-info/pom.xml
@@ -9,19 +9,25 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example.micro</groupId>
-    <artifactId>discovery-server</artifactId>
+    <artifactId>work-info</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>discovery-server</name>
-    <description>discovery-server</description>
+    <name>work-info</name>
+    <description>work-info</description>
     <properties>
         <java.version>17</java.version>
         <spring-cloud.version>2023.0.0-RC1</spring-cloud.version>
     </properties>
     <dependencies>
         <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
+
+
     </dependencies>
     <dependencyManagement>
         <dependencies>
