--- a/work-info/src/main/resources/application.yaml
+++ b/work-info/src/main/resources/application.yaml
@@ -8,7 +8,9 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8081/eureka/
+      defaultZone: http://localhost:8761/eureka/
+  instance:
+    instance-id: ${appId}
 
 
 
